[package]
name = "rust-elliptic-curve"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
libsecp256k1 = "0.7.1"
num-bigint = "0.4"
hex = "0.4.3"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = "1.0.145"
serde_json = {version = "1.0.86", default-features = false, features = ["alloc"] }
web-sys = "0.3.60"
serde_bytes = "0.11.7"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
